# matrix-rich-text-editor

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASE.md  rust-toolchain.toml  sonar-project.properties  update_version.sh
.github/: renovate.json5
.github/workflows/: android.yml  ios.yml  publish.yml  react-build.yml  rust.yml  triage-labelled.yml  wasm.yml
bindings/wysiwyg-ffi/: Cargo.toml
bindings/wysiwyg-ffi/src/: ffi_action_state.rs  ffi_composer_action.rs  ffi_composer_model.rs  ffi_composer_state.rs  ffi_composer_update.rs  ffi_dom_creation_error.rs  ffi_link_actions.rs  ffi_mention_detector.rs  ffi_mentions_state.rs  ffi_menu_action.rs  ffi_menu_state.rs  ffi_pattern_key.rs  ffi_suggestion_pattern.rs  ffi_text_update.rs  into_ffi.rs  lib.rs  wysiwyg_composer.udl
bindings/wysiwyg-wasm/: Cargo.toml  README.md  index-wasm-esm.js  index.cjs  index.d.ts  index.js  node.cjs  node.js  package-lock.json  package.json  tsconfig.json
bindings/wysiwyg-wasm/src/: lib.rs
crates/matrix_mentions/: Cargo.toml
crates/matrix_mentions/src/: lib.rs  mention.rs
crates/wysiwyg/: Cargo.toml
crates/wysiwyg/src/: action_state.rs  char.rs  composer_action.rs  composer_model.rs  composer_state.rs  composer_update.rs  dom.rs  format_type.rs  lib.rs  link_action.rs  list_type.rs  location.rs  mentions_state.rs  menu_action.rs  menu_state.rs  pattern_key.rs  suggestion_pattern.rs  tests.rs  text_update.rs
crates/wysiwyg/src/composer_model/: base.rs  code_block.rs  delete_text.rs  example_format.rs  format.rs  hyperlinks.rs  (+10 more)
crates/wysiwyg/tests/: tests.rs
(+65 files in other folders)
