[package]
authors = ["Jonny Andrew <jonnya@element.io>"]
homepage = "https://github.com/element-hq/matrix-rich-text-editor"
repository = "https://github.com/element-hq/matrix-rich-text-editor"
description = "Utilities for Matrix mentions"
keywords = ["matrix", "chat", "messaging"]
license = "AGPL-3.0"
name = "matrix_mentions"
version = "0.1.0"
edition = "2021"
rust-version = { workspace = true }

[features]
default = ["custom-matrix-urls"]
custom-matrix-urls = []

[dependencies]
cfg-if = "1.0.0"
ruma-common = "0.13.0"
